SF Primes/src/objects/Sandbox_Refresh_Update_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting to hold field API name, Object API Name and Update value.</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>API name of the field</description>
        <inlineHelpText>API name of the field</inlineHelpText>
        <label>Field API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>API name of the object</description>
        <inlineHelpText>API name of the object</inlineHelpText>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value that needs to be update in the field. Leave it blank for updating the fields to null values.</description>
        <inlineHelpText>Value that needs to be update in the field .Leave it blank to update the fields to null values.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sandbox Refresh Update Fields</label>
</CustomObject>